--- a/src/app/domain/sales/styles/saleOrder.scss
+++ b/src/app/domain/sales/styles/saleOrder.scss
@@ -1,6 +1,6 @@
 .sale-order-details {
 
-  .totals .toggle-edit {
+  sale-order-alert .totals .toggle-edit {
     margin-left: 10px;
   }
 
